* Removed <PageWrapper>, it seems there wasn't a need to wrap each page on its own scrollable container as the body was still the one being scrolled, the scroll amounts are also maintained consistently when only the body is scrollable. * Added 'overflow-y-scroll' to the body so that there is always a space alloted for the scrollbar, this prevents width flickers when a scrollbar is added.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,27 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer base {
-  ::-webkit-scrollbar {
-    width: 6px;
-  }
-
-  ::-webkit-scrollbar-track {
-    @apply bg-violet-100;
-  }
-
-  ::-webkit-scrollbar-thumb {
-    @apply bg-gray-400 rounded-full;
-  }
-
-  ::-webkit-scrollbar-thumb:hover {
-    @apply bg-gray-500;
-  }
-}
-
 @layer components {
-  /* Track */
-
   /* For hiding an element's scrollbar for Chrome, Safari and Opera */
   .no-scrollbar::-webkit-scrollbar {
     display: none;
